# ZenithFit

./: .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pre-commit.yml  test.yml
app/: main.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: test_main.py
tests/: test_main.py
