[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ZenithFit"
version = "0.1.0"
description = "Beschreibung deines Projekts hier"
authors = ["Dein Name <deine@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
